# divera-status

./: Cargo.toml  DiveraStatus1.xml  README.md
dbus-client/: Cargo.toml
dbus-client/src/: divera_status1.rs  main.rs
src/: api.rs  api_types.rs  dbus_interface.rs  divera_status1.rs  i3blocks.rs  lib.rs  main.rs  types.rs
