[package]
name = "divera-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "macros", "rt", "time", "sync" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
serde_with = "2.3"
derive-getters = "0.2"
clap = { version = "4", features = [ "derive" ] }