[package]
name = "divera-status"
version = "0.2.0"
edition = "2021"

[features]
default = ["i3blocks"]
# parse input in an i3blocks-like format
i3blocks = []
# provide an dbus interface
dbus-interface = []
# provide an dbus client
dbus-client = ["dbus-interface"]

[workspace]
members = [
    "dbus-client"
]

[dependencies]
tokio = { version = "1", features = [ "macros", "rt", "time", "sync" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
serde_with = "2.3"
derive-getters = "0.2"
clap = { version = "4", features = [ "derive" ] }