[package]
name = "divera-status"
version = "0.2.0"
edition = "2021"

[features]
# parse input in an i3blocks-like format
i3blocks = []
# provide an dbus interface
dbus-interface = [ "dbus", "dbus-crossroads", "dbus-tokio" ]

[workspace]
members = [
    "dbus-client"
]

[dependencies]
tokio = { version = "1", features = [ "macros", "rt", "time", "sync" ] }
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1"
reqwest = { version = "0.11", features = [ "blocking", "json" ] }
serde_with = "3"
derive-getters = "0.2"
clap = { version = "4", features = [ "derive" ] }
strfmt = "0.2"

dbus = { version = "0.9", optional = true }
dbus-crossroads = { version = "0.5", optional = true }
dbus-tokio = { version = "0.7", optional = true }
